<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2">

    <ImageView
        android:id="@+id/start_app_logo"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@id/start_app_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/start_app_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:letterSpacing="0.03"
        android:lineSpacingExtra="5dp"
        android:text="@string/start_app_description"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_app_logo" />

    <LinearLayout
        android:id="@+id/start_app_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_app_description">

        <Button
            android:id="@+id/start_app_more"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="80dp"
            android:text="@string/more" />

        <Button
            android:id="@+id/start_app_sign_in"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="80dp"
            android:backgroundTint="@color/blue_light"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/start_app_sign_up"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="80dp"
            android:backgroundTint="@color/blue_light"
            android:text="@string/sign_up" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="4dp"
        android:text="@string/report_a_problem"
        android:textColor="@color/blue_light"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>