<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="70dp">

    <EditText
        android:id="@+id/signIn_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="13dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/signIn_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signIn_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="13dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/signIn_buttonOk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn_email" />

    <Button
        android:id="@+id/signIn_buttonOk"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="60dp"
        android:text="@string/sign_up"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@id/signIn_signUpSection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn_password" />

    <LinearLayout
        android:id="@+id/signIn_signUpSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn_buttonOk">

        <TextView
            android:id="@+id/signIn_signUpMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_message" />

        <TextView
            android:id="@+id/signIn_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/create_one"
            android:textColor="@color/blue_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signIn_signUpDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>