<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/background_outlined_filled"
    android:paddingHorizontal="20dp"
    android:paddingTop="20dp">

    <TextView
        android:id="@+id/question_dialog_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/remove_invitation_question" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_dialog_question">

        <Button
            android:id="@+id/question_dialog_confirm_button"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/green"
            android:text="@string/yes" />

        <Button
            android:id="@+id/question_dialog_decline_button"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/red"
            android:text="@string/no" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>