<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/changePassword_section"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/changePassword_currentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="60dp"
                android:hint="@string/current_password"
                android:inputType="textPassword"
                android:padding="13dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/changePassword_confirmPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/changePassword_newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="60dp"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:padding="13dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/changePassword_confirmPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/changePassword_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="60dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="13dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/changePassword_buttonsSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="60dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/changePassword_buttonSave"
                    android:layout_width="130dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/save"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/changePassword_buttonCancel"
                    android:layout_width="130dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/cancel"
                    android:textSize="20dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/changePassword_loadingSection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_transparent"
        android:visibility="invisible">

        <ProgressBar
            android:id="@+id/changePassword_progressBar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>