<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/addGame_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/game_title"
                android:padding="13dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/addGame_releaseYear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/addGame_releaseYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/release_year"
                android:padding="13dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/addGame_genre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addGame_title" />

            <EditText
                android:id="@+id/addGame_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/genre"
                android:padding="13dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/addGame_ratingLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addGame_releaseYear" />

            <TextView
                android:id="@+id/addGame_ratingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="13dp"
                android:paddingVertical="8dp"
                android:text="@string/rating"
                app:layout_constraintBottom_toTopOf="@id/addGame_rating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addGame_genre" />

            <RatingBar
                android:id="@+id/addGame_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="40dp"
                android:numStars="5"
                android:progressBackgroundTint="@color/yellow_light"
                android:progressTint="@color/yellow"
                android:rating="0.5"
                android:stepSize="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addGame_ratingLabel" />

            <Button
                android:id="@+id/addGame_addButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginHorizontal="80dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="30dp"
                android:text="@string/game_add"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addGame_rating" />

        </LinearLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addGame_loadingSection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_transparent"
        android:elevation="100dp"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/addGame_progressBar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>